--- a/package.json
+++ b/package.json
@@ -9,21 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/rrule": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.0.0",
+    "@mui/x-date-pickers-pro": "^7.0.0",
     "@vercel/postgres": "^0.7.2",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
