--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "next/core-web-vitals",
- "rules": {
-       "react/no-unescaped-entities": "warn"
+  "rules": {
+    "react/no-unescaped-entities": "warn",
+    "no-unused-vars": "warn"
   }
 }
