--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": {
-    "react/no-unescaped-entities": "warn",
-    "no-unused-vars": "warn"
+ "rules": {
+       "react/no-unescaped-entities": "warn"
   }
 }
