--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^7.0.0",
     "@mui/x-date-pickers-pro": "^7.0.0",
-    "@vercel/postgres": "^0.7.2",
+    "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
-    "next": "14.1.3",
+    "next": "^14.2.23",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
