--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "event_calendar",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "24.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@date-io/date-fns": "^3.0.0",
@@ -40,8 +44,9 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "^16.0.4",
+  "eslint": "^8",
+  "eslint-config-next": "^15.0.0",
+    "husky": "^9.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
