--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@date-io/date-fns": "^3.0.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@fullcalendar/rrule": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.14",
-    "@mui/x-date-pickers": "^7.0.0",
-    "@mui/x-date-pickers-pro": "^7.0.0",
+  "@date-io/date-fns": "^3.2.1",
+  "@emotion/react": "^11.14.0",
+  "@emotion/styled": "^11.14.1",
+  "@fullcalendar/daygrid": "^6.1.19",
+  "@fullcalendar/interaction": "^6.1.19",
+  "@fullcalendar/react": "^6.1.19",
+  "@fullcalendar/rrule": "^6.1.19",
+  "@fullcalendar/timegrid": "^6.1.19",
+  "@mui/icons-material": "^7.3.5",
+  "@mui/lab": "^7.0.1-beta.19",
+  "@mui/material": "^7.3.5",
+  "@mui/x-date-pickers": "^8.19.0",
+  "@mui/x-date-pickers-pro": "^8.19.0",
     "@vercel/postgres": "^0.10.0",
-    "bcrypt": "^5.1.1",
-    "date-fns": "^3.6.0",
-    "dayjs": "^1.11.10",
-    "next": "^14.2.23",
-    "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-modal": "^3.16.1",
-    "react-toastify": "^11.0.3"
+  "bcrypt": "^6.0.0",
+  "date-fns": "^4.1.0",
+  "dayjs": "^1.11.19",
+  "next": "^16.0.4",
+  "next-auth": "^4.24.13",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
+  "react-modal": "^3.16.3",
+  "react-toastify": "^11.0.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-modal": "^3.16.3",
-    "autoprefixer": "^10.0.1",
-  "eslint": "^8",
-  "eslint-config-next": "^15.0.0",
+  "@types/bcrypt": "^6.0.0",
+  "@types/node": "^24.0.0",
+  "@types/react": "^19.0.0",
+  "@types/react-dom": "^19.0.0",
+  "@types/react-modal": "^3.16.3",
+  "autoprefixer": "^10.4.22",
+  "eslint": "^9.0.0",
+  "eslint-config-next": "^16.0.4",
     "husky": "^9.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+  "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
