--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "postcss": "^8",
-    "tailwindcss": "^4.1.17",
+  "tailwindcss": "^4.1.17",
+  "@tailwindcss/postcss": "^4.0.0",
     "typescript": "^5"
   }
 }
