refactor: update package dependencies to latest versions and adjust Node engine requirement

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "22.x"
+  "node": "24.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -29,10 +29,10 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
-    "next": "^16.0.4",
+  "next": "latest",
     "next-auth": "^4.24.13",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+  "react": "latest",
+  "react-dom": "latest",
     "react-modal": "^3.16.3",
     "react-toastify": "^11.0.5"
   },
@@ -42,14 +42,14 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-modal": "^3.16.3",
-    "autoprefixer": "^10.4.22",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^16.0.4",
+    "autoprefixer": "latest",
+    "eslint": "latest",
+  "eslint-config-next": "latest",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "postcss": "^8",
-  "tailwindcss": "^4.1.17",
-  "@tailwindcss/postcss": "^4.0.0",
-    "typescript": "^5"
+    "postcss": "latest",
+  "tailwindcss": "latest",
+  "@tailwindcss/postcss": "latest",
+    "typescript": "latest"
   }
 }
